sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var ecart:Int ;
    ^AlgCombSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var i:Int ;
    ^AlgCombSort:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var n:Int ; 
    ^